# pybench

./: .gitignore  pyproject.toml
docs/: index.html  llms.txt  robots.txt  sitemap.xml
docs/plans/: 2026-02-13-pybench-design.md  2026-02-13-pybench-implementation.md
src/pybench/: __init__.py  bench.py  cli.py  compare.py  reporter.py  results.py  runner.py
tests/: test_bench.py  test_cli.py  test_compare.py  test_init.py  test_integration.py  test_reporter.py  test_results.py  test_runner.py
