[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybench"
version = "0.1.0"
description = "A lightweight Python benchmarking library"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["pytest>=7.0"]

[project.scripts]
pybench = "pybench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
