[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybench"
version = "0.1.0"
description = "A lightweight, zero-dependency Python benchmarking library with decorator and context manager APIs, CLI, and run comparison"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Joseph R Quinn", email = "quinnjr@proton.me" },
]
keywords = [
    "benchmark",
    "benchmarking",
    "performance",
    "profiling",
    "timing",
    "speed",
    "optimization",
    "testing",
    "measurement",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/PegasusHeavyIndustries/pybench"
Repository = "https://github.com/PegasusHeavyIndustries/pybench"
Issues = "https://github.com/PegasusHeavyIndustries/pybench/issues"

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = ["pytest>=7.0"]

[project.scripts]
pybench = "pybench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
